css/style.css
body {
    font: 400 15px/1.8 Lato, sans-serif;
    color: rgb(75, 75, 75);
    background-color: rgb(239, 231, 219);
  }
  h3, h4 {
    margin: 10px 0 30px 0;
    letter-spacing: 7px;      
    font-size: 20px;
    color: #111;
  }
  .container {
    padding: 60px 120px;
  }
  @media (max-width: 600px) {
    .container-s {
        padding: 20px 60px;
    }
    }
  .no-margin {
    margin: 0px;
  }
  .person {
    border: 10px solid transparent;
    margin-bottom: 25px;
    width: 80%;
    height: 80%;
    opacity: 1;
  }
  .person:hover {
    border-color: #f1f1f1;
  }
  #myCarousel {
    padding-top: 100px;
    width: 100%;
    background: url(../images/skystart.jpg);
    /* background-color: #b6c957; */
    background-size: cover;
    background-repeat: no-repeat;
    color: white;
  }
  #starttext {
    font-size: large;
    padding-top: 10px;
  }
  .carousel-inner img {
    /* -webkit-filter: grayscale(90%); */
    /* filter: grayscale(90%); make all photos black and white  */
    /*width: 100%; /* Set width to 100% */
    /* height: 50%; */
    margin: auto;
    /* overflow: auto; */
  }
  .carousel-caption h3 {
    color: #fff !important;
    top: 10%;
  }
  @media (max-width: 600px) {
    .carousel-caption {
      display: none; /* Hide the carousel text when the screen is less than 600 pixels wide */
    }
  }
  .bg-1 {
    background: #2d2d30;
    color: #bdbdbd;
  }
  .bg-1 h3 {color: #fff;}
  .bg-1 p {font-style: italic;}
  .list-group-item:first-child {
    border-top-right-radius: 0;
    border-top-left-radius: 0;
  }
  .list-group-item:last-child {
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
  }
  .thumbnail {
    padding: 0 0 15px 0;
    border: none;
    border-radius: 0;
  }
  .thumbnail p {
    margin-top: 15px;
    color: #555;
  }
  .btn {
    padding: 10px 20px;
    background-color: #333;
    color: #f1f1f1;
    border-radius: 0;
    transition: .2s;
  }
  .btn:hover, .btn:focus {
    border: 1px solid #333;
    background-color: #fff;
    color: #000;
  }
  .modal-header, h4, .close {
    background-color: #333;
    color: #fff !important;
    text-align: center;
    font-size: 30px;
  }
  .modal-header, .modal-body {
    padding: 40px 50px;
  }
  .nav-tabs li a {
    color: #777;
  }
  #googleMap {
    width: 100%;
    height: 400px;
    -webkit-filter: grayscale(100%);
    filter: grayscale(100%);
  }
  .navbar {
    font-family: Montserrat, sans-serif;
    margin-bottom: 0;
    background-color: #2d2d30;
    border: 0;
    font-size: 14px !important;
    letter-spacing: 4px;
    opacity: 0.9;
  }
  .navbar li a, .navbar .navbar-brand { 
    color: #d5d5d5 !important;
  }
  @media (max-width: 810px ) {
    .navbar-brand {
      font-size: 15px;
    }
  }
  @media (max-width : 450px) {
    .navbar-brand {
      font-size: 12px;
      letter-spacing: 2px;
    }
    #myCarousel {
      padding-top: 50px;
    }
  }
  .navbar-nav li a:hover {
    color: #fff !important;
  }
  .navbar-nav li.active a {
    color: #fff !important;
    background-color: #29292c !important;
  }
  .navbar-default .navbar-toggle {
    border-color: transparent;
  }
  .open .dropdown-toggle {
    color: #fff;
    background-color: #555 !important;
  }
  .dropdown-menu li a {
    color: #000 !important;
  }
  .dropdown-menu li a:hover {
    background-color: red !important;
  }
  footer {
    background-color: #2d2d30;
    color: #f5f5f5;
    padding: 32px;  
  }
  footer a {
    color: #f5f5f5;
  }
  footer a:hover {
    color: #777;
    text-decoration: none;
  }  
  .form-control {
    border-radius: 0;
  }
  textarea {
    resize: none;
  }
  @media (max-width: 1150px) {
    .navbar-header {
        float: none;
    }
    .navbar-left,.navbar-right {
        float: none !important;
    }
    .navbar-toggle {
        display: block;
    }
    .navbar-collapse {
        border-top: 1px solid transparent;
        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
    }
    .navbar-fixed-top {
        top: 0;
        border-width: 0 0 1px;
    }
    .navbar-collapse.collapse {
        display: none!important;
    }
    .navbar-nav {
        float: none!important;
        margin-top: 7.5px;
    }
    .navbar-nav>li {
        float: none;
    }
    .navbar-nav>li>a {
        padding-top: 10px;
        padding-bottom: 10px;
    }
    .collapse.in{
        display:block !important;
    }
  }

